# VoxRad

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODOS.md  VoxRad.py  docker-compose.yml  fly.toml  render.yaml  requirements-web.txt  requirements.txt
agents/: requirements.txt  voxrad_mwl_agent.py
audio/: recorder.py  transcriber.py
config/: config.py  settings.py
deploy/: nginx.conf
desktop/: .gitignore  README.md  package.json
desktop-helper/: README.md  RadSpeedImpressions.ahk
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: api.rs  hotkey.rs  keyboard.rs  lib.rs  main.rs  settings.rs  tray.rs  updater.rs
docs/: ROADMAP.md  deploy-web.md  local-whisper-setup.md  mwl-bridge-agent.md
guidelines/: BIRADS_MAMMOGRAPHY.md  BIRADS_USG.md  LIRADS_(Liver).md  PIRADS.md  TIRADS.md
landing/: lumenrad.html  narrad.html  radspeed.html
llm/: dicom_sr_export.py  fhir_export.py  format.py  hl7_export.py  hl7_import.py  impressions.py  secure_paste.py
logs/: 25774147860-summary.txt  25774148012-summary.txt  25774471690-summary.txt  25774471873-summary.txt  25774641410-summary.txt  25777332052-summary.txt  index.md
release-runs/: 0.2.18.md  0.2.21.md  0.2.22.md
templates/: Abdominal_Xray.txt  Bone_Scan.txt  CT_Abdomen_Pelvis.txt  CT_Angiography_Thoracic.txt  CT_Chest.txt  CT_Head_Brain.txt  CT_KUB.txt  CT_Neck.txt  CT_Pulmonary_Angiogram.txt  CT_Sinuses.txt  CT_Spine_Cervical.txt  CT_Spine_Lumbar.txt  CT_Spine_Thoracic.txt  CXR.txt  Echocardiography.txt  HRCT_Thorax.txt  (+24 more)
(+34 files in other folders)
